--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-Pillow==3.2.0
 amqp==1.4.9
 anyjson==0.3.3
-argparse==1.2.1
 billiard==3.3.0.23
 celery==3.1.23
 cffi==1.5.2
 cryptography==1.3.1
 cssselect==0.9.1
 enum34==1.1.3
+et-xmlfile==1.0.1
 idna==2.1
 ipaddress==1.0.16
+jdcal==1.2
 kombu==3.0.35
 lxml==3.6.0
 numpy==1.11.0
 oauthlib==1.0.3
+openpyxl==2.3.5
 pandas==0.18.0
 pdfminer==20110515
 pdftables==0.0.4
-pyOpenSSL==16.0.0
+Pillow==3.2.0
 pyasn1==0.1.9
 pycparser==2.14
+pyOpenSSL==16.0.0
 python-dateutil==2.5.2
 pytz==2016.3
 redis==2.10.5
@@ -27,4 +29,3 @@ requests==2.9.1
 requests-oauthlib==0.6.1
 six==1.10.0
 tweepy==3.5.0
-wsgiref==0.1.2
