--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,71 @@
 amqp==1.4.9
 anyjson==0.3.3
+appnope==0.1.0
+backports-abc==0.4
+backports.shutil-get-terminal-size==1.0.0
+backports.ssl-match-hostname==3.5.0.1
 billiard==3.3.0.23
 celery==3.1.23
+certifi==2016.2.28
 cffi==1.5.2
+configparser==3.3.0.post2
 cryptography==1.3.1
 cssselect==0.9.1
+decorator==4.0.9
+entrypoints==0.2
 enum34==1.1.3
 et-xmlfile==1.0.1
+functools32==3.2.3.post2
+gnureadline==6.3.3
 idna==2.1
 ipaddress==1.0.16
+ipykernel==4.3.1
+ipython==4.2.0
+ipython-genutils==0.1.0
+ipywidgets==5.0.0
 jdcal==1.2
+Jinja2==2.8
+jsonschema==2.5.1
+jupyter==1.0.0
+jupyter-client==4.2.2
+jupyter-console==4.1.1
+jupyter-core==4.1.0
 kombu==3.0.35
 lxml==3.6.0
+MarkupSafe==0.23
+mistune==0.7.2
+nbconvert==4.2.0
+nbformat==4.0.1
+ndg-httpsclient==0.4.0
+notebook==4.2.0
 numpy==1.11.0
 oauthlib==1.0.3
 openpyxl==2.3.5
 pandas==0.18.0
+pathlib2==2.1.0
 pdfminer==20110515
 pdftables==0.0.4
+pexpect==4.0.1
+pickleshare==0.7.2
 Pillow==3.2.0
+ptyprocess==0.5.1
 pyasn1==0.1.9
 pycparser==2.14
+Pygments==2.1.3
 pyOpenSSL==16.0.0
 python-dateutil==2.5.2
 pytz==2016.3
+pyzmq==15.2.0
+qtconsole==4.2.1
 redis==2.10.5
 requests==2.9.1
 requests-oauthlib==0.6.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.10.0
+terminado==0.6
+tornado==4.3
+traitlets==4.2.1
 tweepy==3.5.0
+widgetsnbextension==1.0.0
+xlrd==0.9.4
