--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ cffi==1.5.2
 configparser==3.3.0.post2
 cryptography==1.3.1
 cssselect==0.9.1
+cycler==0.10.0
 decorator==4.0.9
 entrypoints==0.2
 enum34==1.1.3
 et-xmlfile==1.0.1
 functools32==3.2.3.post2
+fuzzywuzzy==0.10.0
 gnureadline==6.3.3
 idna==2.1
 ipaddress==1.0.16
@@ -33,6 +35,7 @@ jupyter-core==4.1.0
 kombu==3.0.35
 lxml==3.6.0
 MarkupSafe==0.23
+matplotlib==1.5.1
 mistune==0.7.2
 nbconvert==4.2.0
 nbformat==4.0.1
@@ -42,6 +45,7 @@ numpy==1.11.0
 oauthlib==1.0.3
 openpyxl==2.3.5
 pandas==0.18.0
+pandas-datareader==0.2.1
 pathlib2==2.1.0
 pdfminer==20110515
 pdftables==0.0.4
@@ -53,16 +57,20 @@ pyasn1==0.1.9
 pycparser==2.14
 Pygments==2.1.3
 pyOpenSSL==16.0.0
+pyparsing==2.1.1
 python-dateutil==2.5.2
+python-Levenshtein==0.12.0
 pytz==2016.3
 pyzmq==15.2.0
 qtconsole==4.2.1
 redis==2.10.5
 requests==2.9.1
+requests-file==1.4
 requests-oauthlib==0.6.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
+SQLAlchemy==1.0.12
 terminado==0.6
 tornado==4.3
 traitlets==4.2.1
