--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ kombu==3.0.35
 lxml==3.6.0
 MarkupSafe==0.23
 matplotlib==1.5.1
+memory-profiler==0.41
 mistune==0.7.2
 nbconvert==4.2.0
 nbformat==4.0.1
@@ -52,6 +53,7 @@ pdftables==0.0.4
 pexpect==4.0.1
 pickleshare==0.7.2
 Pillow==3.2.0
+psutil==4.2.0
 ptyprocess==0.5.1
 pyasn1==0.1.9
 pycparser==2.14
