--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backports-abc==0.4
 backports.shutil-get-terminal-size==1.0.0
 backports.ssl-match-hostname==3.5.0.1
 billiard==3.3.0.23
+bokeh==0.11.1
 celery==3.1.23
 certifi==2016.2.28
 cffi==1.5.2
@@ -17,6 +18,7 @@ entrypoints==0.2
 enum34==1.1.3
 et-xmlfile==1.0.1
 functools32==3.2.3.post2
+futures==3.0.5
 fuzzywuzzy==0.10.0
 gnureadline==6.3.3
 idna==2.1
@@ -41,6 +43,7 @@ mistune==0.7.2
 nbconvert==4.2.0
 nbformat==4.0.1
 ndg-httpsclient==0.4.0
+nltk==3.2.1
 notebook==4.2.0
 numpy==1.11.0
 oauthlib==1.0.3
@@ -60,15 +63,17 @@ pycparser==2.14
 Pygments==2.1.3
 pyOpenSSL==16.0.0
 pyparsing==2.1.1
-python-dateutil==2.5.2
+python-dateutil==2.5.3
 python-Levenshtein==0.12.0
 pytz==2016.3
+PyYAML==3.11
 pyzmq==15.2.0
 qtconsole==4.2.1
 redis==2.10.5
-requests==2.9.1
+requests==2.10.0
 requests-file==1.4
 requests-oauthlib==0.6.1
+scipy==0.17.1
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.10.0
